# vectors.db

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  DOCUMENTATION.md  Dockerfile  README.md  docker-compose.yml  prometheus.yml
.cargo/: config.toml
.github/workflows/: ci.yml  python-release.yml
benches/: ann_glove100.rs  ann_glove25.rs  ann_sift128.rs  bm25_nfcorpus.rs
benchmarks/: convert_hdf5.py
crates/core/: Cargo.toml
crates/core/src/: config.rs  document.rs  filter_types.rs  lib.rs
crates/core/src/bm25/: inverted_index.rs  scorer.rs  tokenizer.rs
crates/core/src/hnsw/: distance.rs  graph.rs  insert.rs  mod.rs  search.rs  visited.rs
crates/core/src/quantization/: mod.rs  pq.rs  scalar.rs  simd.rs
crates/core/src/search/: filter.rs  hybrid.rs  mod.rs  types.rs
crates/core/src/storage/: collection.rs  crypto.rs  mod.rs  persistence.rs  wal.rs
crates/python/: Cargo.toml  README.md  pyproject.toml
crates/python/python/vectorsdb/: __init__.py  __init__.pyi  _vectorsdb.cp313-win_amd64.pyd
crates/python/src/: lib.rs
crates/python/tests/: test_vectorsdb.py
crates/server/: Cargo.toml
crates/server/benches/: ann_sift128.rs
crates/server/src/: lib.rs  main.rs  wal_async.rs
crates/server/src/api/: audit.rs  errors.rs  handlers.rs  metrics.rs  mod.rs  models.rs  rbac.rs
crates/server/src/cluster/: mod.rs  network.rs  store.rs  types.rs
crates/server/src/replication/: mod.rs  primary.rs  protocol.rs  standby.rs
crates/server/tests/: api_tests.rs
examples/: 01_quickstart.py  02_metadata_filtering.py  03_persistence.py  04_batch_operations.py  05_distance_metrics.py
grafana/: dashboard.json
grafana/provisioning/dashboards/: dashboards.yml
src/: config.rs  document.rs  lib.rs  main.rs
src/api/: errors.rs  handlers.rs  metrics.rs  mod.rs  models.rs  rate_limit.rs  rbac.rs
src/bm25/: inverted_index.rs  mod.rs  scorer.rs
src/cluster/: api.rs  store.rs  types.rs
src/hnsw/: distance.rs  graph.rs  insert.rs  search.rs  visited.rs
src/quantization/: mod.rs  scalar.rs  simd.rs
src/search/: filter.rs  hybrid.rs
src/storage/: collection.rs  mod.rs  persistence.rs  wal.rs
tests/: api_tests.rs
