[package]
name = "vectors-db"
version = "0.1.0"
edition = "2021"
description = "In-memory vector database with HNSW, BM25, and hybrid search"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
bincode = "1.3"
uuid = { version = "1", features = ["v4", "serde"] }
ordered-float = { version = "4", features = ["serde"] }
parking_lot = "0.12"
rand = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
clap = { version = "4", features = ["derive"] }
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip"] }
crc32fast = "1.4"
metrics = "0.24"
metrics-exporter-prometheus = "0.16"
tower = { version = "0.5", features = ["timeout", "limit", "buffer"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
openraft = { version = "0.9", features = ["serde", "storage-v2"] }
reqwest = { version = "0.12", features = ["json"] }
subtle = "2"

[dev-dependencies]
tempfile = "3"

[[bench]]
name = "ann_glove25"
harness = false

[[bench]]
name = "ann_sift128"
harness = false

[[bench]]
name = "ann_glove100"
harness = false

[[bench]]
name = "bm25_nfcorpus"
harness = false
