[workspace]
members = ["crates/core", "crates/server", "crates/python"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
# Shared across core + server
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
bincode = "1.3"
uuid = { version = "1", features = ["v4", "serde"] }
ordered-float = { version = "4", features = ["serde"] }
parking_lot = "0.12"
rand = "0.8"
tracing = "0.1"
crc32fast = "1.4"

# Server-only
tokio = { version = "1", features = ["full"] }
axum = "0.7"
tower = { version = "0.5", features = ["timeout", "limit", "buffer"] }
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
openraft = { version = "0.9", features = ["serde", "storage-v2"] }
reqwest = { version = "0.12", features = ["json"] }
clap = { version = "4", features = ["derive"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
metrics = "0.24"
metrics-exporter-prometheus = "0.16"
subtle = "2"

# Python bindings
pyo3 = { version = "0.23", features = ["extension-module"] }

# Dev
tempfile = "3"

[profile.release]
lto = "fat"
codegen-units = 1
