[package]
name = "vectorsdb-py"
version.workspace = true
edition.workspace = true
description = "Python bindings for vectors.db"

[lib]
name = "_vectorsdb"
crate-type = ["cdylib"]

[dependencies]
vectorsdb-core = { path = "../core" }
pyo3 = { workspace = true }
uuid = { workspace = true }
serde_json = { workspace = true }
