[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "vectorsdb"
version = "0.1.0"
description = "In-memory vector database with HNSW, BM25, and hybrid search"
requires-python = ">=3.9"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[tool.maturin]
manifest-path = "Cargo.toml"
module-name = "vectorsdb"
