[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "vectors-db"
version = "0.1.0"
description = "In-memory vector database with HNSW, BM25, and hybrid search"
requires-python = ">=3.9"
license = { text = "AGPL-3.0" }
authors = [
    { name = "Nullcline Labs", email = "info@nullcline.com" },
]
readme = "README.md"
keywords = ["vector-database", "hnsw", "bm25", "hybrid-search", "embeddings"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: GNU Affero General Public License v3",
]

[project.urls]
Homepage = "https://github.com/nullcline-labs/vectors.db"
Repository = "https://github.com/nullcline-labs/vectors.db"
Issues = "https://github.com/nullcline-labs/vectors.db/issues"

[tool.maturin]
manifest-path = "Cargo.toml"
module-name = "vectorsdb._vectorsdb"
python-source = "python"
